--- a/Sistema de Gestion de Inventario Nuvéa/Modelos/Modelos.csproj
+++ b/Sistema de Gestion de Inventario Nuvéa/Modelos/Modelos.csproj
@@ -42,7 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Conexion\Conexion.cs" />
-    <Compile Include="Entidades\Proveedor.cs" />
+    <Compile Include="Entidades\Rol.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
