INICIO SESION TERMINADO

--- a/Sistema de Gestion de Inventario Nuvéa/Vistas/Vistas.csproj
+++ b/Sistema de Gestion de Inventario Nuvéa/Vistas/Vistas.csproj
@@ -82,6 +82,12 @@
     <Compile Include="Formularios\frmLogin.Designer.cs">
       <DependentUpon>frmLogin.cs</DependentUpon>
     </Compile>
+    <Compile Include="Formularios\frmOlivdasteContraseña.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formularios\frmOlivdasteContraseña.Designer.cs">
+      <DependentUpon>frmOlivdasteContraseña.cs</DependentUpon>
+    </Compile>
     <Compile Include="Formularios\frmPrincipal.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -116,6 +122,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Formularios\frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Formularios\frmOlivdasteContraseña.resx">
+      <DependentUpon>frmOlivdasteContraseña.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Formularios\frmPrincipal.resx">
       <DependentUpon>frmPrincipal.cs</DependentUpon>
