--- a/Sistema de Gestion de Inventario Nuvéa/Modelos/Modelos.csproj
+++ b/Sistema de Gestion de Inventario Nuvéa/Modelos/Modelos.csproj
@@ -64,10 +64,9 @@
     <Compile Include="Entidades\detalleFactura.cs" />
     <Compile Include="Entidades\Producto.cs" />
     <Compile Include="Entidades\Proveedor.cs" />
-    <Compile Include="Entidades\RecuperacionService.cs" />
     <Compile Include="Entidades\Rol.cs" />
-    <Compile Include="Entidades\Seguridad.cs" />
     <Compile Include="Entidades\Usuario.cs" />
+    <Compile Include="ModeloPrimerUsuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
