--- a/Sistema de Gestion de Inventario Nuvéa/Vistas/Vistas.csproj
+++ b/Sistema de Gestion de Inventario Nuvéa/Vistas/Vistas.csproj
@@ -63,6 +63,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Formularios\frmBienvenida.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formularios\frmBienvenida.Designer.cs">
+      <DependentUpon>frmBienvenida.cs</DependentUpon>
+    </Compile>
     <Compile Include="Formularios\frmFacturacion.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -123,6 +129,12 @@
     <Compile Include="Formularios\frmOlivdasteContraseña.Designer.cs">
       <DependentUpon>frmOlivdasteContraseña.cs</DependentUpon>
     </Compile>
+    <Compile Include="Formularios\frmPrimerUso.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formularios\frmPrimerUso.Designer.cs">
+      <DependentUpon>frmPrimerUso.cs</DependentUpon>
+    </Compile>
     <Compile Include="Formularios\frmPrincipal.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -149,6 +161,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Formularios\frmBienvenida.resx">
+      <DependentUpon>frmBienvenida.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Formularios\frmFacturacion.resx">
       <DependentUpon>frmFacturacion.cs</DependentUpon>
     </EmbeddedResource>
@@ -178,6 +193,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Formularios\frmOlivdasteContraseña.resx">
       <DependentUpon>frmOlivdasteContraseña.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Formularios\frmPrimerUso.resx">
+      <DependentUpon>frmPrimerUso.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Formularios\frmPrincipal.resx">
       <DependentUpon>frmPrincipal.cs</DependentUpon>
@@ -244,6 +262,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Logo.Nuvéa.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1499345621-contact_85338.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
