--- a/Sistema de Gestion de Inventario Nuvéa/Vistas/Vistas.csproj
+++ b/Sistema de Gestion de Inventario Nuvéa/Vistas/Vistas.csproj
@@ -296,5 +296,8 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-configuración-del-administrador-100.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
